<resources>
    <string name="app_name">Восход</string>

    <!-- Exit dialog -->
    <string name="dialog_exit_title">Выход</string>
    <string name="dialog_exit_message">Вы уверены, что хотите выйти?</string>
    <string name="dialog_exit_positive">Да</string>
    <string name="dialog_exit_negative">Нет</string>

    <string name="bottom_nav_my_day">Мой день</string>
    <string name="bottom_nav_statistics">Статистика</string>
    <string name="bottom_nav_categories">Категории</string>
    <string name="bottom_nav_profile">Профиль</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Привет, я пустой фрагмент</string>

    <string name="fab_description">создать новую задачу</string>

    <!-- Authentication -->
    <string name="login">Войти</string>
    <string name="login_welcome_message">С возвращением ;)</string>
    <string name="nickname">Никнейм</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="click_to_login">Нажмите, чтобы войти</string>
    <string name="click_to_register">Нажмите, чтобы зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="authentication_failed">Ошибка аутентификации</string>

    <!-- Create Task -->
    <string name="title">Заголовок</string>
    <string name="new_task">Новая Задача</string>
    <string name="priority">Приоритет</string>
    <string name="create">Создать</string>
    <string name="priority_high">Высокий</string>
    <string name="priority_medium">Средний</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_regular">Обычный</string>

    <!-- Categories -->
    <string name="tags">Теги</string>
    <string name="completed_tile_label">Завершенные задачи</string>
    <string name="completed">Завершено</string>
    <string name="trash">Корзина</string>
    <string name="scheduled">Запланировано</string>
    <string name="create_new_tag">Создать новый тег</string>
    <string name="button_to_create_new_tag">кнопка для создания нового тега</string>
    <string name="color">Цвет</string>
    <string name="colors">Цвета</string>
    <string name="default_tag">Тег по умолчанию</string>
    <string name="create_new_category">Создать новую категорию</string>
    <string name="create_category">Создать категорию</string>
    <string name="icons">Иконки</string>
    <string name="edit_category_button">Кнопка редактирования категории</string>
    <string name="edit_category">Редактировать категорию</string>
    <string name="delete">Удалить</string>
    <string name="category">Категория</string>
    <string name="save">Сохранить</string>

    <!-- Profile fragment -->
    <string name="logout">Выйти</string>
    <string name="dialog_title_sign_out">Выйти</string>
    <string name="dialog_message_sign_out">Вы уверены, что хотите выйти?</string>
    <string name="button_sign_out">Выйти</string>
    <string name="button_cancel">Отмена</string>
    <string name="sign_out_success_message">Выход выполнен успешно</string>
    <string name="route_icon">Иконка маршрута</string>
    <string name="by_rnbsov">от Rnbsov</string>
    <string name="update">Обновить</string>

    <!-- Statistics fragment -->
    <string name="tags_usage_distribution">Распределение использования тегов</string>

    <!-- Workspaces fragment -->
    <string name="team_work_makes_perfect">Командная работа делает совершенным!</string>
    <string name="enter_invite_code">Введите код приглашения...</string>


    <!-- Workspaces task -->
    <string name="status_not_started">Не начато</string>
    <string name="status_in_process">В процессе</string>
    <string name="status_done">Завершено</string>
    <string name="status">Статус</string>
    <string name="display_a_role_of_the_member">Отображение роли участника</string>
    <string name="shows_a_list_of_actions_admin_can_use_on_user">Показывает список действий, которые администратор может использовать для пользователя</string>
    <string name="promote_to_admin">Повысить до администратора</string>
    <string name="mute">Отключить</string>
    <string name="kick">Выгнать</string>
    <string name="generate_invite_code">Сгенерировать код приглашения</string>
    <string name="an_icon_to_copy_the_code">Иконка для копирования кода</string>

    <!-- Settings -->
    <string name="pref_language_title">Язык</string>
    <string name="pref_language_summary">Выберите предпочтительный язык</string>

</resources>
