<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_my_day"
        android:icon="@drawable/flower_24px"
        android:title="@string/bottom_nav_my_day" />
    <item
        android:id="@+id/page_statistics"
        android:icon="@drawable/insert_chart_24px"
        android:title="@string/bottom_nav_statistics" />
    <item
        android:id="@+id/page_workspaces"
        android:icon="@drawable/groups_24px"
        android:title="Workspaces" />
    <item
        android:id="@+id/page_categories"
        android:icon="@drawable/category_24px"
        android:title="@string/bottom_nav_categories" />
    <item
        android:id="@+id/page_profile"
        android:icon="@drawable/account_circle_24px"
        android:title="@string/bottom_nav_profile" />
</menu>