<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/page_my_day">

    <fragment
        android:id="@+id/page_my_day"
        android:name="com.example.sunrise.fragments.MyDayFragment"
        android:label="@string/bottom_nav_my_day"
        tools:layout="@layout/fragment_my_day" />

    <fragment
        android:id="@+id/page_statistics"
        android:name="com.example.sunrise.fragments.StatisticsFragment"
        android:label="@string/bottom_nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/page_workspaces"
        android:name="com.example.sunrise.fragments.WorkspacesFragment"
        android:label="Workspaces"
        tools:layout="@layout/fragment_workspaces" >
        <action
            android:id="@+id/action_page_workspaces_to_workspaceFragment"
            app:destination="@id/workspaceFragment" />
    </fragment>

    <fragment
        android:id="@+id/page_categories"
        android:name="com.example.sunrise.fragments.CategoriesFragment"
        android:label="@string/bottom_nav_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_page_categories_to_tagsFragment"
            app:destination="@id/tagsFragment" />
        <action
            android:id="@+id/action_page_categories_to_categoryFragment"
            app:destination="@id/categoryFragment" />
        <action
            android:id="@+id/action_page_categories_to_completedTasksFragment"
            app:destination="@id/completedTasksFragment" />
    </fragment>

    <fragment
        android:id="@+id/page_profile"
        android:name="com.example.sunrise.fragments.ProfileFragment"
        android:label="@string/bottom_nav_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_page_profile_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/tagsFragment"
        android:name="com.example.sunrise.fragments.TagsFragment"
        android:label="@string/tags"
        tools:layout="@layout/fragment_tags" />

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.sunrise.fragments.CategoryFragment"
        android:label="fragment_category"
        tools:layout="@layout/fragment_category">
        <argument
            android:name="categoryId"
            app:argType="string" />
        <argument
            android:name="categoryTitle"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/completedTasksFragment"
        android:name="com.example.sunrise.fragments.CompletedTasksFragment"
        android:label="@string/completed_tile_label"
        tools:layout="@layout/fragment_completed_tasks" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.sunrise.fragments.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/workspaceFragment"
        android:name="com.example.sunrise.fragments.WorkspaceFragment"
        android:label="fragment_workspace"
        tools:layout="@layout/fragment_workspace" />
</navigation>
