<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/priority"
            style="@style/Widget.Material3.Chip.Assist.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/priority"
            app:chipIcon="@drawable/flag_24px" />

        <com.google.android.material.chip.Chip
            android:id="@+id/status"
            style="@style/Widget.Material3.Chip.Assist.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawableTint="@color/material_dynamic_tertiary60"
            android:text="@string/status"
            app:chipIcon="@drawable/atr_24px" />

        <com.google.android.material.chip.Chip
            android:id="@+id/assign_chip"
            style="@style/Widget.Material3.Chip.Assist.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTint="@color/material_dynamic_tertiary60"
            android:text="Assign"
            app:chipIcon="@drawable/person_24px" />
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tagChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="@string/create"
        android:textSize="16sp" />

</LinearLayout>