<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CategoriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/tags_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_secondary10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:contentPadding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/tags"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:drawableLeftCompat="@drawable/label_24px"
                app:drawableTint="@color/material_dynamic_primary70" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/completed_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_secondary10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:contentPadding="15dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/completed"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:drawableLeftCompat="@drawable/flag_24px"
                app:drawableTint="@color/material_dynamic_primary70" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="10dp"
            app:constraint_referenced_ids="tags_tile, completed_tile"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="10dp"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalBias="0"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_1">

        <androidx.cardview.widget.CardView
            android:id="@+id/trash_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_secondary10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:contentPadding="15dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/trash"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:drawableLeftCompat="@drawable/delete_sweep_24px"
                app:drawableTint="@color/material_dynamic_primary70" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/scheduled_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_secondary10"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:contentPadding="15dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/scheduled"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:drawableLeftCompat="@drawable/calendar_clock_24px"
                app:drawableTint="@color/material_dynamic_primary70" />
        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="10dp"
            app:constraint_referenced_ids="trash_tile, scheduled_tile"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="10dp"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalBias="0"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_2" />

</androidx.constraintlayout.widget.ConstraintLayout>